# JCheng_erp

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
android/app/src/main/: AndroidManifest.xml
src/: main.py
src/main/: AndroidManifest.xml
