[project]
name = "JCheng"
version = "0.1.1"
description = "玖诚电器ERP移动端"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jiuchengERP", email = "ywxing79523@163.com" }
]

# 本地开发依赖
dependencies = [
    "flet>=0.85.3",
    "mysql-connector-python",
    "Pillow",
    "numpy",
    "reportlab",
    "appdirs",
    "requests"，
    "opencv-python"
]

# Flet 0.85.3 打包APK唯一读取的依赖配置，必须写全所有需要内置的包（含certifi）
[tool.flet.dependencies]
packages = [
    "flet>=0.85.3",
    "mysql-connector-python",
    "Pillow",
    "numpy",
    "reportlab",
    "appdirs",
    "requests",
    "certifi",
    "opencv-python"
]

[tool.flet]
org = "com.jiucheng"
product = "jiuchengerp"
copyright = "Copyright (C) 2023-2026 by jiucheng"
main = "src/main.py"
assets_dir = "src/assets"

[tool.flet.android]
permissions = [
    "CAMERA",
    "READ_MEDIA_IMAGES",
    "READ_EXTERNAL_STORAGE",
    "WRITE_EXTERNAL_STORAGE",
    "INTERNET",
    "ACCESS_NETWORK_STATE",
    "ACCESS_WIFI_STATE"
]
min_sdk_version = 24
target_sdk_version = 33
compile_sdk_version = 33
hardware_accelerated = true
[tool.flet.app]
path = "src"
