[project]
name = "JCheng"
version = "0.1.1"
description = "玖诚电器ERP移动端"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jiuchengERP", email = "ywxing79523@163.com" }
]

dependencies = [
    "flet==0.85.3",
    "mysql-connector-python",
    "Pillow",
    "numpy",
    "reportlab",
    "appdirs",
    "requests",
    "certifi",
    "opencv-python"
]

[tool.flet.dependencies]
packages = [
    "flet==0.85.3",
    "mysql-connector-python",
    "Pillow",
    "numpy",
    "reportlab",
    "appdirs",
    "requests",
    "certifi",
    "opencv-python"
]

[tool.flet]
org = "com.jiucheng"
product = "jiuchengerp"
copyright = "Copyright (C) 2023-2026 by jiucheng"
assets = "src/assets"   # 修正资源目录字段

[tool.flet.app]
path = "src"
entry_point = "main:main"   # 确保指向正确的入口

[tool.flet.android]
min_sdk_version = 24
target_sdk_version = 33
compile_sdk_version = 33
hardware_accelerated = true
